--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,7 @@
 <IfModule mod_rewrite.c>
 	<IfModule mod_negotiation.c>
     	Options -MultiViews
+        Options +FollowSymLinks
     </IfModule>
 
     RewriteEngine On
@@ -11,5 +12,6 @@
 	# Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-l
     RewriteRule ^ index.php [L]
 </IfModule>
