htaccess will handle symlinks

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,10 @@
 <IfModule mod_rewrite.c>
 	<IfModule mod_negotiation.c>
     	Options -MultiViews
-        Options +FollowSymLinks
     </IfModule>
 
     RewriteEngine On
+    Options +FollowSymLinks
 
     # Redirect Trailing Slashes...
 	RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -13,5 +13,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-l
-    RewriteRule ^ index.php [L]
+    #RewriteRule ^ index.php [L]
+    RewriteRule ^(.+) index.php [L]
 </IfModule>
