htaccess will handle symlinks

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,6 +11,5 @@
 	# Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    #RewriteRule ^ index.php [L]
-    RewriteRule ^(.*)$ index.php/$1 [L]
+    RewriteRule ^ index.php [L]
 </IfModule>
